--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbar">
 
             <ul class="logotype">
-                <li><a href="">
+                <li><a href="#">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/f70f00178a7f0baa31e9c01634303d8562cfe93a/student-week1/logo-all-dark.svg"
                             alt="logo">
                     </a></li>
@@ -25,13 +25,13 @@
 
             <div class="info">
                 <ul class="menu">
-                    <li><a href="">首頁</a></li>
-                    <li><a href="">甜點</a></li>
-                    <li><a href="">登入</a></li>
+                    <li><a href="#">首頁</a></li>
+                    <li><a href="#">甜點</a></li>
+                    <li><a href="#">登入</a></li>
 
                 </ul>
                 <ul class="cart">
-                    <li><a href="">
+                    <li><a href="#">
                             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/shopping_cart.png?raw=true"
                                 alt="購物車">
                         </a></li>
@@ -54,10 +54,10 @@
         <div class="list">
             <ul>
                 <p>甜點類別</p>
-                <li><a href="">所有甜點 (48)</a></li>
-                <li><a href="">本日精選 (10)</a></li>
-                <li><a href="">人氣精選 (26)</a></li>
-                <li><a href="">新品上市 (12)</a></li>
+                <li><a href="#">所有甜點 (48)</a></li>
+                <li><a href="#">本日精選 (10)</a></li>
+                <li><a href="#">人氣精選 (26)</a></li>
+                <li><a href="#">新品上市 (12)</a></li>
             </ul>
         </div>
         <!-- 右邊甜點區 -->
@@ -70,7 +70,7 @@
                             alt="奇異果">
 
                         <ul class="favorite">
-                            <li><a href="">
+                            <li><a href="#">
                                     <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
                                         alt="收藏">
                                 </a>
@@ -95,7 +95,7 @@
                     </ul>
 
                     <ul class="snack_add">
-                        <li><a href="">加入購物車</a>
+                        <li><a href="#">加入購物車</a>
                         </li>
                     </ul>
 
@@ -109,7 +109,7 @@
                             alt="鬆餅">
 
                         <ul class="favorite">
-                            <li><a href="">
+                            <li><a href="#">
                                     <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
                                         alt="收藏">
                                 </a>
@@ -134,7 +134,7 @@
                     </ul>
 
                     <ul class="snack_add">
-                        <li><a href="">加入購物車</a>
+                        <li><a href="#">加入購物車</a>
                         </li>
                     </ul>
 
@@ -147,7 +147,7 @@
                             alt="莓果夾心蛋糕">
 
                         <ul class="favorite">
-                            <li><a href="">
+                            <li><a href="#">
                                     <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
                                         alt="收藏">
                                 </a>
@@ -172,7 +172,7 @@
                     </ul>
 
                     <ul class="snack_add">
-                        <li><a href="">加入購物車</a>
+                        <li><a href="#">加入購物車</a>
                         </li>
                     </ul>
 
@@ -194,7 +194,7 @@
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/143d37deb8a19ecd8eccc806ae26acbb90fe4338/student-week1/p-2.png"
                             alt="甜甜圈">
                         <ul class="favorite">
-                            <li><a href="">
+                            <li><a href="#">
                                     <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
                                         alt="收藏">
                                 </a>
@@ -219,7 +219,7 @@
                     </ul>
 
                     <ul class="snack_add">
-                        <li><a href="">加入購物車</a>
+                        <li><a href="#">加入購物車</a>
                         </li>
                     </ul>
 
@@ -233,7 +233,7 @@
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/143d37deb8a19ecd8eccc806ae26acbb90fe4338/student-week1/p-4.png"
                             alt="蛋糕">
                         <ul class="favorite">
-                            <li><a href="">
+                            <li><a href="#">
                                     <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
                                         alt="收藏">
                                 </a>
@@ -258,7 +258,7 @@
                     </ul>
 
                     <ul class="snack_add">
-                        <li><a href="">加入購物車</a>
+                        <li><a href="#">加入購物車</a>
                         </li>
                     </ul>
 
@@ -269,7 +269,7 @@
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/143d37deb8a19ecd8eccc806ae26acbb90fe4338/student-week1/p-6.png"
                             alt="草莓奶酪">
                         <ul class="favorite">
-                            <li><a href="">
+                            <li><a href="#">
                                     <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
                                         alt="收藏">
                                 </a>
@@ -294,7 +294,7 @@
                     </ul>
 
                     <ul class="snack_add">
-                        <li><a href="">加入購物車</a>
+                        <li><a href="#">加入購物車</a>
                         </li>
                     </ul>
 
